--- a/info.yaml
+++ b/info.yaml
@@ -1,13 +1,13 @@
 ---
 project:
-  description: "An analog project for Google sponsored Open MPW shuttles for SKY130."
+  description: "An analog comparator with SKY130."
   foundry: "SkyWater"
-  git_url: "https://github.com/efabless/caravel_analog_user.git"
-  organization: "Efabless"
-  organization_url: "http://efabless.com"
-  owner: "Tim Edwards"
+  git_url: "https://github.com/siliconwiz/caravel_comparator.git"
+  organization: "vlsi system design"
+  organization_url: "https://www.vlsisystemdesign.com"
+  owner: "Malay Das"
   process: "SKY130"
-  project_name: "Caravel Analog User"
+  project_name: "Comparator"
   project_id: "00000000"
   tags:
     - "Open MPW"
